Implement model functions and test performance_on_categorical_slice in notebook

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "62875b9c-4bf3-4c35-9a2d-a03be379ec07",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1842d144-46e2-47a9-a5b6-366f88ededf5",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "32099868-20bd-411d-9670-60205aa7a211",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dcdd036-2f02-466b-a88d-beb0d2d4db00",
+   "metadata": {},
+   "source": [
+    "--Testing Model.py functions--"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c04639b4-9b8a-4069-9091-cf86e3cd4478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ml.model import (\n",
+    "    train_model,\n",
+    "    performance_on_categorical_slice\n",
+    ")\n",
+    "from ml.data import process_data\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "423ad4c4-2361-4938-8db6-aa0e0d3eeee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_features = [\n",
+    "    \"workclass\",\n",
+    "    \"education\",\n",
+    "    \"marital-status\",\n",
+    "    \"occupation\",\n",
+    "    \"relationship\",\n",
+    "    \"race\",\n",
+    "    \"sex\",\n",
+    "    \"native-country\",\n",
+    "]\n",
+    "\n",
+    "# Train/test split\n",
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Process training data\n",
+    "X_train, y_train, encoder, lb = process_data(\n",
+    "    train_df,\n",
+    "    categorical_features=cat_features,\n",
+    "    label=\"salary\",\n",
+    "    training=True\n",
+    ")\n",
+    "\n",
+    "# Train the model\n",
+    "model = train_model(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ebc2b606-e20c-454e-b1c7-6640655168ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "education=Bachelors | Precision: 0.7523 | Recall: 0.7289 | F1: 0.7404\n"
+     ]
+    }
+   ],
+   "source": [
+    "precision, recall, f1 = performance_on_categorical_slice(\n",
+    "    test_df,\n",
+    "    column_name=\"education\",\n",
+    "    slice_value=\"Bachelors\",\n",
+    "    categorical_features=cat_features,\n",
+    "    label=\"salary\",\n",
+    "    encoder=encoder,\n",
+    "    lb=lb,\n",
+    "    model=model\n",
+    ")\n",
+    "\n",
+    "print(f\"education=Bachelors | Precision: {precision:.4f} | Recall: {recall:.4f} | F1: {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a34b7f98-f8cc-410c-a2b3-8223cae58203",
+   "metadata": {},
+   "source": [
+    "-- --"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3677c467-4dba-46e8-8fc1-b49da3c3ee8e",
+   "id": "24cf2c37-bf0d-4c7b-9138-216c9380f199",
    "metadata": {},
    "outputs": [],
    "source": []
